# pygcprofiler

./: CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT  README.md  dashboard_long_test.py  gc-util.py  main.py  pyproject.toml
gc_util/: __init__.py  cli.py  codegen.py  main.py  templates.py
pygctest/: __init__.py  main.py  pyproject.toml  test.py
src/gc_monitor/: __init__.py  __main__.py  blunders.py  cli.py  codegen.py  flamegraph.py  logging.py  memory.py  monitor.py  processing.py  prompts.py  reporting.py  stats.py
tests/: __init__.py  conftest.py  test_cli.py  test_cli_flags.py  test_codegen.py  test_integration.py  test_monitor.py  test_prompts.py  test_stats.py
