[project]
name = "pygcprofiler"
version = "0.1.0"
description = "See Python's garbage collector in action without getting in its way."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psutil>=7.1.3",
]

[project.scripts]
gc-monitor = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gc_monitor"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
